--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -1,7 +1,7 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,64,44)
+  MoveScaled(0,0,64,64)
   Text = ("Angriff")
   { TextLabel1 TextLabel
     MoveScaled(2,2,15,3)
@@ -12,18 +12,6 @@
     MinValue = 1
     MaxValue = 20
     Value = 1
-  }
-  { CheckBox1 CheckBox
-    MoveScaled(24,1,24,4)
-    Text = ("Motivation")
-  }
-  { CheckBox2 CheckBox
-    MoveScaled(24,5,24,4)
-    Text = ("PBS")
-  }
-  { CheckBox3 CheckBox
-    MoveScaled(24,9,24,4)
-    Text = ("Lock On")
   }
   { ValueBox1 ValueBox
     MoveScaled(1,16,24,4)
@@ -37,20 +25,26 @@
     Text = ("Disable Edit")
   }
   { ValueBox2 ValueBox
-    MoveScaled(26,16,24,4)
+    MoveScaled(1,29,24,4)
   }
   { TextLabel3 TextLabel
-    MoveScaled(27,13,23,3)
+    MoveScaled(2,26,23,3)
     Text = ("Crit ab")
   }
   { LCDLabel1 LCDLabel
-    MoveScaled(18,20,41,14)
+    MoveScaled(11,41,41,14)
   }
   { Label1 Label
-    MoveScaled(22,34,24,9)
+    MoveScaled(20,54,24,9)
   }
   { Button1 Button
     MoveScaled(11,6,13,4)
     Text = ("Calc")
+  }
+  { ScrollView1 ScrollView
+    MoveScaled(39,1,24,42)
+  }
+  { debugl Label
+    MoveScaled(27,12,8,3)
   }
 }
